--- a/package.json
+++ b/package.json
@@ -1,5 +1,14 @@
 {
     "name": "scache",
     "description": "Simple cache in memory",
-    "version": "1.0.0"
+    "version": "1.0.1",
+    "author": "Andrey Rublev <version.ru@gmail.com>",
+    "url": "https://github.com/anru/scache",
+    "keywords": [
+        "cache"
+    ],
+    "repository": {
+        "type": "git",
+        "url": "git@github.com:anru/scache.git"
+    }
 }
